--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.2",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.7.0"
   },
   "devDependencies": {
     "eslint": "^8",
