--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.2",
+    "leaflet": "^1.9.4",
     "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-intersection-observer": "^9.7.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.7.0",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "eslint": "^8",
